# zephyr

drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/icm20948/: CMakeLists.txt  Kconfig  icm20948.c  icm20948.h  icm20948_setup.c  icm20948_setup.h  icm20948_spi.c
samples/on-board-nn/: CMakeLists.txt  prj.conf
samples/on-board-nn/src/: exported-nn.c  main.c  nn.cpp  nn.h  raw-data.c
samples/on-board-rf/: CMakeLists.txt
samples/on-board-rf/src/: exported-rf.c  main.c
samples/sensor/icm20948/: CMakeLists.txt  README.rst  prj.conf
samples/sensor/icm20948/boards/: nrf5340dk_nrf5340_cpuapp.overlay  nrf5340dk_nrf5340_cpuapp.overlay.new
samples/sensor/icm20948/src/: main.c
